--- a/react-prototype/package.json
+++ b/react-prototype/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "firebase": "^5.8.4",
+    "history": "^4.7.2",
     "react": "^16.8.2",
     "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.2",
     "react-redux": "^6.0.1",
-    "react-router": "^4.3.1",
+    "react-router": "^3.2.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5",
     "redux": "^4.0.1"
   },
