--- a/react-prototype/package.json
+++ b/react-prototype/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "firebase": "^5.8.6",
     "react": "^16.8.4",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.4",
     "react-redux": "^6.0.1",
     "react-router": "^3.2.1",
     "react-scripts": "2.1.8",
+    "react-switch": "^4.1.0",
     "redux": "^4.0.1"
   },
   "scripts": {
